implement getScreenUsers